syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "NullableGrpcDecimal.proto";
import "NullableGrpcDate.proto";
import "google/protobuf/wrappers.proto";
import "ModificationStamp.proto";
import "SalesArrangementParameters.proto";

message SalesArrangement {
	int32 SalesArrangementId = 1;

	// ID Case ke kteremu SA patri
	int64 CaseId = 2;

	// Druh SA
	int32 SalesArrangementTypeId = 3;

	// Stav SA
	int32 State = 4;

	// ID modelace, ktera je spojena s timto SA - neni povinne
	google.protobuf.Int32Value OfferId = 5;

	// Uzivatel, ktery SA vytvoril
	cis.types.ModificationStamp Created = 6;
	
	string ContractNumber = 7;
	
	// ID kanalu uzivatele, ktery SA vytvoril
	int32 ChannelId = 8;

	string RiskBusinessCaseId = 9;

	string LoanApplicationAssessmentId = 11;

	string RiskSegment = 12;

	cis.types.NullableGrpcDate OfferGuaranteeDateFrom = 13;

	cis.types.NullableGrpcDate OfferGuaranteeDateTo = 14;

	cis.types.NullableGrpcDecimal LoanToCost = 15;

	string CommandId = 16;

	cis.types.NullableGrpcDate RiskBusinessCaseExpirationDate = 17;

	string EaCode = 18;

	cis.types.NullableGrpcDate FirstSignedDate = 19;

	oneof Parameters {
        DomainServices.SalesArrangementService.SalesArrangementParametersMortgage Mortgage = 20;
    }
}
